<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.example.zhulinping.rxjavalearndemo.operator.OperatorActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_create"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/change_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_change"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
         />

    <Button
        android:id="@+id/filter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_filter"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

    <Button
        android:id="@+id/combine_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_combine"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <Button
        android:id="@+id/help_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_help"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <Button
        android:id="@+id/error_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_error"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <Button
        android:id="@+id/connect_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_connect"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <Button
        android:id="@+id/condition_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_condition"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <Button
        android:id="@+id/caculate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_caculate"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
</LinearLayout>
</ScrollView>