<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhulinping.rxjavalearndemo.operator.OperatorCreateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">
        <Button
            android:id="@+id/create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"/>
        <Button
            android:id="@+id/defer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defer"/>
        <Button
            android:id="@+id/from_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"/>

    </LinearLayout>

</ScrollView>
